# 2D-Quantum-Free-Particle

./: .gitignore  2DListPlotter.nb  2Dparticle.cpp  AGENTS.md  CONTRIBUTING.md  README.md  ROADMAP.md  freeparticle.h  pyproject.toml  run.sh
.github/: pull_request_template.md
apps/: streamlit_dashboard.py
benchmarks/: __init__.py
docs/: flagship-experiment.md  flagship-model-transfer.md  inverse-design-runner.md  jax-execution.md  objectives-and-gradients.md  optics-model-validation.md  phase-constraints.md  propagation-interface.md  scalar-optics-conventions.md  v1-release.md
examples/: barrier_zeno.toml  double_slit.toml  free_packet.toml  gaussian_lens.toml  inverse_design_smoke.toml  robust_flagship.toml  validation_suite.toml  zeno_research_sweep.toml  zeno_sweep.toml
gpu/: 2D_particle_cuda.cu  2D_particle_cupy.py
media/: media.txt
python/: 2D-particle.py  Norm-2D-particle.py  argpngs2mp4.sh  dev-2D-particle.py  flipping-fixing.py  pngs2mp4.sh  readme.md
slices/: README.md
tests/: test_constraints.py  test_dashboard.py  test_flagship.py  test_flagship_validation.py  test_grid_potential_artifacts.py  test_jax_constraints.py  test_jax_gradients.py  test_jax_propagation.py  test_objectives.py  test_optics_foundation.py  test_optics_m1_reference.py  test_optics_propagation.py  test_optimization.py  test_propagation.py  test_quantum_v0_1_regression.py  test_release_identity.py  test_solver_experiments_cli.py  test_validation.py  test_wave_cli.py
visualization/: README.md  compilepngs2video.sh  convert-data-to-video.py  fastviewsandboxdata.py  (+1 more)
(+51 files in other folders)
